syntax = "proto3";

package if4031;

option java_multiple_files = true;
option java_outer_classname = "ChatProto";

service Chat {
	rpc setNickname (gString) returns (gString) {}
	rpc joinChannel (paramSend) returns (gInt) {}
	rpc leaveChannel (paramSend) returns (gInt) {}
	rpc sendMessage (paramSend) returns (gInt) {}
	rpc sendMessageTo (paramSendTo) returns (gInt) {}
	rpc exit (gString) returns (gInt) {}
	rpc receiveMessage (gString) returns (stream Message) {}
}

message Message {
  string nickname = 1;
  string channel = 2;
  string message = 3;
  string time = 4;
}

message gString {
	string val = 1;
}

message gInt {
	int32 val = 1;
}

message paramSend {
	string param1 = 1;
	string param2 = 2;
}

message paramSendTo {
	string param1 = 1;
	string param2 = 2;
	string param3 = 3;
}
